avcodec/cscd: Check for CamStudio Lossless Codec 1.0 behavior in end check of LZO files

Alternatively the check could be simply made more tolerant
Fixes: Ticket10227

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>